erDiagram
    TENANTS ||--o{ STORE_INTEGRATIONS : "has"
    STORE_INTEGRATIONS ||--o{ STORE_CREDENTIALS : "has"

    STORE_INTEGRATIONS {
        string id PK "UUID - Sequelize: DataTypes.UUID"
        string tenant_id FK "NOT NULL - UUID - Sequelize: DataTypes.UUID"
        string store_type "NOT NULL - ENUM: APP_STORE, PLAY_STORE, TESTFLIGHT, MICROSOFT_STORE, etc"
        string display_name "NOT NULL"
        string app_identifier "NOT NULL - bundle id or package name"
        string target_app_id "NULL"
        string default_locale "NULL"
        string team_name "NULL - Apple team name"
        string default_track "NULL - Google Play track: internal/beta/production"
        string status "NOT NULL - ENUM: pending, verified, revoked"
        date last_verified_at "NULL"
        date created_at "Sequelize: DataTypes.DATE"
        date updated_at "Sequelize: DataTypes.DATE"
    }

    STORE_CREDENTIALS {
        string id PK "UUID - Sequelize: DataTypes.UUID"
        string integration_id FK "ON DELETE CASCADE - UUID - Sequelize: DataTypes.UUID"
        string credential_type "NOT NULL - ENUM: apple_api_key, google_service_account, etc"
        string encrypted_payload "NOT NULL - Sequelize: DataTypes.BLOB('long')"
        string encryption_scheme "NOT NULL"
        date created_at "Sequelize: DataTypes.DATE"
        date rotated_at "NULL"
    }

